[package]
name = "tokio_uds_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#remote
tokio = { version = "1.25.0", features = ["full"] }
crossbeam = "0.8"
anyhow = "1"

#local
daemon_lib = { path = "../../daemon_lib"}